--- a/index.html
+++ b/index.html
@@ -1183,63 +1183,88 @@
         <script>
             // Customer comments data
             const allComments = [
-                { name: "محمد السيد", location: "الإسكندرية، مصر", comment: "جودة نقية، رائحة جميلة وطازجة. أنا مندهش." },
-                { name: "يوسف نبيل", location: "دبي، الإمارات العربية المتحدة", comment: "وصلت الطلبية متأخرة يومين، من فضلكم حسنوا وقت التوصيل." },
-                { name: "خالد حسام", location: "الرياض، المملكة العربية السعودية", comment: "واو، هذا ممتاز شكرًا. سأطلب مرة أخرى بالتأكيد." },
-                { name: "عمر طارق", location: "القاهرة، مصر", comment: "أفضل دواء استخدمته مؤخرًا. نظيف ومغلف جيدًا." },
-                { name: "حسن فريد", location: "الدوحة، قطر", comment: "التغليف رائع جدًا. شعرت بالتأثير خلال ساعة." },
-                { name: "محمود جمال", location: "مسقط، سلطنة عمان", comment: "أنا أشعر بشعور رائع بعد أخذ هذا. فعلاً مدهش." },
-                { name: "سامي فوزي", location: "الجيزة، مصر", comment: "هل يمكنني الحصول على خصم على طلب كيلو واحد؟" },
-                { name: "علي سمير", location: "الشارقة، الإمارات العربية المتحدة", comment: "نظيف وقوي وأفضل بكثير مما أجد محليًا." },
-                { name: "أحمد زيدان", location: "جدة، المملكة العربية السعودية", comment: "مثالي تمامًا. شكرًا على الخدمة السريعة والسرية." },
-                { name: "طارق خليفة", location: "المنامة، البحرين", comment: "رقم التتبع لم يعمل لمدة يومين. من فضلكم أصلحوه." },
-                { name: "وليد أحمد", location: "الإسكندرية، مصر", comment: "يبدو أصليًا وكان التأثير كما توقعت." },
-                { name: "نورهان عادل", location: "دبي، الإمارات العربية المتحدة", comment: "وصل في حالة جيدة. شكرًا على العناية." },
-                { name: "هاني توفيق", location: "المدينة المنورة، المملكة العربية السعودية", comment: "كل شيء من التغليف إلى الجودة ممتاز تمامًا." },
-                { name: "مصطفى عادل", location: "القاهرة، مصر", comment: "جودة عالية فعلاً. أفضل مما كنت أتوقع." },
-                { name: "عبدالله سالم", location: "الدوحة، قطر", comment: "الملصق والإغلاق كانا احترافيين جدًا." },
-                { name: "علاء حسن", location: "مسقط، سلطنة عمان", comment: "أحببت النتيجة. أخذت 2 جرام ونمت كطفل." },
-                { name: "كريم حلمي", location: "أبو ظبي، الإمارات العربية المتحدة", comment: "وصل خلال 3 أيام فقط. نقي وسلس. أنصح به بشدة." },
-                { name: "هشام كمال", location: "السويس، مصر", comment: "هل عندكم ورق؟ ما شفته بالصندوق." },
-                { name: "تامر أنور", location: "العين، الإمارات العربية المتحدة", comment: "الصندوق الخارجي كان تالف، لكن المنتج كان سليم." },
-                { name: "آية سامح", location: "الدمام، المملكة العربية السعودية", comment: "صراحة تفاجأت. أول مرة أطلب وأنا سعيدة جدًا." },
-                { name: "Mohab Fekry", location: "الإسماعيلية، مصر", comment: "This is the best I ever got. Way cheaper than street price." },
-                { name: "Fady Hatem", location: "دبي، الإمارات العربية المتحدة", comment: "Thanks guys, everything came perfectly wrapped." },
-                { name: "Ramy Elbaz", location: "المدينة المنورة، المملكة العربية السعودية", comment: "My second order, and again no complaints." },
-                { name: "Seif Lotfy", location: "الدوحة، قطر", comment: "Really clean and effective. Better than what I tried before." },
-                { name: "Ahmed Yehia", location: "مسقط، سلطنة عمان", comment: "Best from local market and very cheap." },
-                { name: "باسل عمر", location: "الجيزة، مصر", comment: "رائع ببساطة. لا تعليق إضافي." },
-                { name: "حبيبة نادر", location: "أبو ظبي، الإمارات العربية المتحدة", comment: "شحن سريع وتأثير قوي وخدمة احترافية." },
-                { name: "شريف صالح", location: "جدة، المملكة العربية السعودية", comment: "هل يمكنني الدفع نقدًا المرة القادمة أو فقط بطاقة؟" },
-                { name: "كريم سيد", location: "الإسكندرية، مصر", comment: "جودة عالية حقًا والرائحة كانت جميلة أيضًا." },
-                { name: "منى حجازي", location: "دبي، الإمارات العربية المتحدة", comment: "وصلت في صندوق بسيط، مناسب للخصوصية." },
-                { name: "Amr Galal", location: "مكة، المملكة العربية السعودية", comment: "Love it. Please keep this item always in stock." },
-                { name: "Yasser Mousa", location: "الدوحة، قطر", comment: "Wow. I'm speechless. You guys really nailed it." },
-                { name: "Omar Said", location: "مسقط، سلطنة عمان", comment: "What's the maximum order limit for this product?" },
-                { name: "زياد بدر", location: "القاهرة، مصر", comment: "هذا أصلي ١٠٠٪. جربت كثير قبله." },
-                { name: "عادل مصطفى", location: "العين، الإمارات العربية المتحدة", comment: "جيد جدًا، قلت لابن عمي يجربه فورًا." },
-                { name: "Nader Tawadros", location: "الرياض، المملكة العربية السعودية", comment: "Package was delayed 1 day but I don't mind. It's worth it." },
-                { name: "Tariq Ehab", location: "الإسكندرية، مصر", comment: "Amazing quality. Please bring larger packs." },
-                { name: "Ibrahim Nasr", location: "دبي، الإمارات العربية المتحدة", comment: "So clean, no weird smell, and effects last long." },
-                { name: "Mohamed El Sayed", location: "الإسكندرية، مصر", comment: "Thanks, I received my order in Alexandria. Very satisfied and great quality." },
-                { name: "Sara Ahmed", location: "القاهرة، مصر", comment: "Quick delivery and the product feels genuine. Thank you!" },
-                { name: "أحمد خالد", location: "الجيزة، مصر", comment: "تم استلام الطلب في الجيزة، الخدمة كانت سريعة والجودة ممتازة." },
-                { name: "أحمد خالد", location: "القاهرة، مصر", comment: "تم استلام الطلب في القاهرة، الخدمة كانت سريعة والجودة ممتازة." },
-                { name: "أحمد خالد", location: "طنطا، مصر", comment: "تم استلام الطلب في طنطا، الخدمة كانت سريعة والجودة ممتازة." },
-                { name: "Omar Fouad", location: "المنصورة، مصر", comment: "Delivery was slightly delayed but still very happy with the product." },
-                { name: "Nourhan Saeed", location: "أسوان، مصر", comment: "Satisfied with the product and the speed of delivery." },
-                { name: "أحمد علي", location: "جدة، السعودية", comment: "وصلتني الشحنة بسرعة والجودة ممتازة، شكراً لكم." },
-                { name: "منى سالم", location: "الرياض، السعودية", comment: "هل يمكنني الحصول على خصم عند الطلب القادم؟" },
-                { name: "خالد صالح", location: "الدمام، السعودية", comment: "وصلت الطلبية لكن تأخرت يومين، أتمنى تحسين وقت التوصيل." },
-                { name: "Latifa Mansour", location: "الدوحة، قطر", comment: "Amazing service, product quality is excellent!" },
-                { name: "أحمد سالم", location: "العين، الإمارات", comment: "تم استلام الطلب في العين، شكراً على الخدمة السريعة." },
-                { name: "Fatima Youssef", location: "القاهرة، مصر", comment: "Thanks, received everything perfectly in Cairo." },
-                { name: "عبدالله ناصر", location: "مسقط، عمان", comment: "توصيل سريع ومنتج قانوني وفعال. أنصح به بشدة." },
-                { name: "Salem Al Tamimi", location: "دبي، الإمارات", comment: "Is this product available for bulk order?" }, 
-                { name: "عبدالله ناصر", location: "مسقط، عمان", comment: "توصيل سريع ومنتج قانوني وفعال. أنصح به بشدة." },
-                { name: "Salem Al Tamimi", location: "دبي، الإمارات", comment: "Is this product available for bulk order?" }, 
-            ];
-
+                
+{ name: "محمد علي", location: "السعودية, الرياض", comment: "وصلني خلال أربعة أيام إلى المملكة العربية السعودية. كان المنتج متينًا - مثاليًا، مُغلّف مرتين داخل كيس شاي. لا رائحة له. منتج قوي، ورائحة نقية جدًا." },
+{ name: "فاطمة الزهراء العلي", location: "مصر, القاهرة", comment: "جودة فائقة - نقية تمامًا. أفضل ما امتلكته منذ شهور. شحن سريع، بدون أي مشاكل جمركية." },
+{ name: "سعود الأحمد", location: "قطر, الدوحة", comment: "وصل الطلب متأخرًا بيوم واحد، يُرجى تحسين وقت التسليم. بشكل عام، استلمتُ الطرد بأمان، والجودة أفضل من أي وقت مضى. شكرًا لكم." },
+{ name: "ريم حسن", location: "الإمارات, دبي", comment: "هل يمكنني الحصول على أي خصم على طلب حزمة 1 كجم في المرة القادمة" },
+{ name: "أحمد حسن", location: "البحرين, المحرق", comment: "أشعر وكأنني أطير في السحاب بعد تناول نصف جرام. شكرًا لكم على الجودة الأفضل والخدمة الأفضل" },
+{ name: "Khalid Almansoor", location: "الإمارات, أبوظبي", comment: "“Pure white, fluffy, burns clean. Best batch yet. Came in plain DVD case — genius.”" },
+{ name: "ناصر محمود", location: "الكويت, الكويت", comment: "نظيف وقوي وأفضل بكثير مما أجده محليًا." },
+{ name: "Youssef Al-Amin", location: "مصر, الإسكندرية", comment: "هل يمكنني الحصول عليه نقدًا في المرة القادمة.. هذه المرة استخدمت حساب صديقي للدفع ولكنه الآن خارج البلاد.. يرجى تقديم أي طريقة للدفع نقدًا" },
+{ name: "علي إبراهيم", location: "عمان, مسقط", comment: "Big chunky shards, very clear. No chemical burn, smooth smoke. Will definitely re-up." },
+{ name: "خالد عبد الله", location: "السعودية, جدة", comment: "الهيروين كان ثقيل وخام، حسيت بقوة ما جربتها من قبل." },
+{ name: "حسن يوسف", location: "الإمارات, الشارقة", comment: "التأخير بسيط لكن المنتج ممتاز" },
+{ name: "Omar Al-Fahad", location: "الكويت, الأحمدي", comment: "That “special white” is not a joke, my weekend was wild. You guys know your stuff." },
+{ name: "مريم سامي", location: "مصر, المنصورة", comment: "استلمت طلبي قبل الموعد المتوقع" },
+{ name: "Samir Khalid", location: "البحرين, المنامة", comment: "The hash from you guys tasted so clean, no burnt aftertaste. Solid plug." },
+{ name: "يوسف سالم", location: "قطر, الريان", comment: "الكيتا كان ممتاز، لكن أتمنى توصلوا الطلبية في نفس اليوم المرة الجاية." },
+{ name: "Faisal Al-Harthi", location: "عمان, صلالة", comment: "Your crystal was the purest I’ve seen in months, you guys don’t cut corners." },
+{ name: "أيمن فاروق", location: "السعودية, الدمام", comment: "Very fresh and smells great" },
+{ name: "سارة علي", location: "الإمارات, العين", comment: "الوردة  التي وصلتني كانت كبيرة، نظيفة. جربتها في الصحراء، وكانت أمسية رائعة." },
+{ name: "Nabil Jaber", location: "قطر, دخان", comment: "Do you have any “blue dolphin” tabs left? My friends are asking." },
+{ name: "محمد سالم", location: "مصر, أسوان", comment: "الحشيش كان ممتاز لكن اتأخر يومين، أتمنى تحسنون التسليم." },
+{ name: "Abdulrahman Al-Balushi", location: "عمان, صحار", comment: "Your ketamine was perfect for my night, felt relaxed but still awake." },
+{ name: "Mahmoud Nabil", location: "مصر, طنطا", comment: "Best pills to take while enjoying in Bangkok in holidays" },
+{ name: "Faisal Al-Sabah", location: "الكويت, الجهراء", comment: "Bro, is it possible to get the same “moon rocks” you had last month?" },
+{ name: "Bandar Al-Mansoor", location: "السعودية, مكة", comment: "The “party candy” was pure, and the vibe was perfect. Thanks for the hookup." },
+{ name: "عليا محمود", location: "الإمارات, دبي", comment: "بعد الاستخدام أشعر وكأني سوبرمان" },
+{ name: "عبد الله الشمري", location: "السعودية, تبوك", comment: "الحجر الأبيض كان صافي وريحته قوية، الخدمة أسرع من المتوقع." },
+{ name: "Abdulaziz Al-Khalifa", location: "البحرين, المحرق", comment: "Man, your “special green” is top notch, feels like I’m floating. Delivery was smooth too." },
+{ name: "راشد ناصر", location: "الإمارات, رأس الخيمة", comment: "Your “gold dust” is fire, keeps me awake and buzzing all night." },
+{ name: "يوسف الكندي", location: "عمان, نزوى", comment: "توصيل سريع، منتج رائع وآمن" },
+{ name: "Rami Al-Hamad", location: "قطر, الدوحة", comment: "Was the “magic paper” hit exactly how I like it, colors everywhere. Worth the wait." },
+{ name: "عبد العزيز العتيبي", location: "السعودية, الرياض", comment: "ما هو الحد الأقصى للطلب في السعودية؟" },
+{ name: "فاطمة حسن", location: "مصر, الإسكندرية", comment: "الكابتشينو أنيق، وأشربه بقوة وثبات طوال الليل. شكرًا لك يا ذيب." },
+{ name: "سليمان الجابر", location: "الكويت, مدينة الكويت", comment: "سمعت عنكم كثير، جربت “البودرة الذهبية” وكانت قوية لكن سعرها شوي عالي." },
+{ name: "Hassan Al-Mutairi", location: "السعودية, الخبر", comment: "Man, your product made me feel like I was in space, legit experience." },
+{ name: "خالد الغامدي", location: "السعودية, أبها", comment: "الحشيش كان حلو لكن التغليف مو قوي، انفتح الكيس في الشحن." },
+{ name: "Samir Al-Farsi", location: "عمان, مسقط", comment: "Do you also have larger size from A4 of paper?" },
+{ name: "سامي عبد الله", location: "مصر, أسيوط", comment: "الجودة أفضل مما أشتري محلياً والسعر ممتاز" },
+{ name: "يوسف الكعبي", location: "الإمارات, دبي", comment: "الكريستال اللي وصلني كان ممتاز، نظيف ومافيه أي شوائب." },
+{ name: "نورة المطيري", location: "السعودية, حائل", comment: "هل عندكم نوع جديد من “الأخضر الملكي” ولا نفس القديم؟" },
+{ name: "Faisal Al-Nuaimi", location: "الإمارات, الفجيرة", comment: "The mdma didn’t hit as hard as last time, maybe a weaker batch?" },
+{ name: "عبد الله الزهراني", location: "السعودية, الرياض", comment: "كل منتج عالي الجودة وواضح، يصل إلى الدماغ بسرعة ولا يحترق." },
+{ name: "منى سعيد", location: "البحرين, المحرق", comment: "الورق اللي وصلني فيه رسمة الشمس كان فوق الوصف، كل حاجة كانت واضحة." },
+{ name: "Faisal Al-Mansoori", location: "الإمارات, أبو ظبي", comment: "هل يمكنني الدفع عند الاستلام؟" },
+{ name: "صالح الحمادي", location: "عمان, نزوى", comment: "سمعت إن عندكم “سكر بني” جديد، هل هو أقوى من اللي قبل؟" },
+{ name: "Majed Al-Naqbi", location: "الإمارات, العين", comment: "الكريستال عندكم غالي شوي لكن جودته تخلي الواحد ينسى السعر." },
+{ name: "أحمد القحطاني", location: "السعودية, جدة", comment: "كل شيء عالي الجودة، توصيل آمن وسريع." },
+{ name: "Abdullah Al-Mahmoud", location: "الكويت, الجهراء", comment: "الكبت كان مثل الهيلكس، طعم وقوة ثابتة." },
+{ name: "نادر حسن", location: "مصر, المنوفية", comment: "سمعت عنكم كثير، وأخيراً جربت “البودرة الذهبية”، قوية لكن السعر مرتفع شوي." },
+{ name: "Fares Al-Dossari", location: "السعودية, الدمام", comment: "The “brown sugar” batch was smooth and strong, no bad comedown." },
+{ name: "محمد المنصور", location: "البحرين, المحرق", comment: "Was the “magic paper” hit exactly how I like it, colors everywhere. Worth the wait." },
+{ name: "سليمان الجابري", location: "عمان, صحار", comment: "الشبو نقي كالثلج ❄️. كسرته بسهولة، ويعطي مفعوله من أول رشفة." },
+{ name: "Hamed Al-Harbi", location: "السعودية, الطائف", comment: "The “party candy” was pure, and the vibe was perfect. Thanks for the hookup." },
+{ name: "خالد عبد العزيز", location: "الكويت, حولي", comment: "هل يوجد نوع “الأخضر الملكي” الجديد أو فقط نفس النوع القديم؟" },
+{ name: "ناصر الهاشمي", location: "الإمارات, دبي", comment: "الكريستال عندكم غالي شوي لكن جودته تخلي الواحد ينسى السعر." },
+{ name: "Abdullah Al-Rashid", location: "السعودية, جازان", comment: "Was the “magic paper” hit exactly how I like it, colors everywhere. Worth the wait." },
+{ name: "محمد السعدي", location: "البحرين, المحرق", comment: "الكبت كان مثل الهيلكس، طعم وقوة ثابتة." },
+{ name: "أحمد القاسمي", location: "الإمارات, الشارقة", comment: "الكريستال اللي وصلني كان ممتاز، نظيف ومافيه أي شوائب." },
+{ name: "نورهان عبد الرحمن", location: "مصر, الزقازيق", comment: "هل يمكنني الحصول على أي خصم على طلب حزمة 1 كجم في المرة القادمة" },
+{ name: "عمر سعيد", location: "قطر, الدوحة", comment: "بعد الاستخدام أشعر وكأني سوبرمان" },
+{ name: "ياسر محمود", location: "مصر, الإسكندرية", comment: "جودة فائقة - نقية تمامًا. أفضل ما امتلكته منذ شهور. شحن سريع، بدون أي مشاكل جمركية." },
+{ name: "فيصل العتيبي", location: "السعودية, الرياض", comment: "وصلني خلال أربعة أيام إلى المملكة العربية السعودية. كان المنتج متينًا - مثاليًا، مُغلّف مرتين داخل كيس شاي. لا رائحة له. منتج قوي، ورائحة نقية جدًا." },
+{ name: "نورا عبد الله", location: "الإمارات, أبو ظبي", comment: "أشعر وكأنني أطير في السحاب بعد تناول نصف جرام. شكرًا لكم على الجودة الأفضل والخدمة الأفضل" },
+{ name: "سعيد أحمد", location: "الكويت, مدينة الكويت", comment: "هل يمكنني الحصول عليه نقدًا في المرة القادمة.. هذه المرة استخدمت حساب صديقي للدفع ولكنه الآن خارج البلاد.. يرجى تقديم أي طريقة للدفع نقدًا" },
+{ name: "مصطفى عبد الرحمن", location: "مصر, المنوفية", comment: "نظيف وقوي وأفضل بكثير مما أجده محليًا." },
+{ name: "Walid Al-Suwaidi", location: "الإمارات, عجمان", comment: "The “brown sugar” batch was smooth and strong, no bad comedown." },
+{ name: "Saad Al-Mutairi", location: "السعودية, أبها", comment: "The mdma didn’t hit as hard as last time, maybe a weaker batch?" },
+{ name: "هدى سعيد", location: "مصر, أسوان", comment: "هل يمكنني الحصول على أي خصم على طلب حزمة 1 كجم في المرة القادمة" },
+{ name: "خالد العجمي", location: "الكويت, الفروانية", comment: "The hash from you guys tasted so clean, no burnt aftertaste. Solid plug." },
+{ name: "سعد النعيمي", location: "الإمارات, رأس الخيمة", comment: "الكيتا كان ممتاز، لكن أتمنى توصلوا الطلبية في نفس اليوم المرة الجاية." },
+{ name: "عبد الرحمن المحمود", location: "السعودية, الدمام", comment: "الكريستال عندكم غالي شوي لكن جودته تخلي الواحد ينسى السعر." },
+{ name: "Rashed Al-Balushi", location: "عمان, صلالة", comment: "Man, your product made me feel like I was in space, legit experience." },
+{ name: "خالد عبد الله", location: "السعودية, المدينة المنورة", comment: "الحشيش كان حلو لكن التغليف مو قوي، انفتح الكيس في الشحن." },
+{ name: "سامي جابر", location: "مصر, بورسعيد", comment: "Best pills to take while enjoying in Bangkok in holidays" },
+{ name: "Faisal Al-Qahtani", location: "السعودية, مكة", comment: "The “party candy” was pure, and the vibe was perfect. Thanks for the hookup." },
+{ name: "عبد العزيز النعيمي", location: "الإمارات, دبي", comment: "Man, your “special green” is top notch, feels like I’m floating. Delivery was smooth too." },
+{ name: "إبراهيم الحربي", location: "السعودية, جيزان", comment: "Was the “magic paper” hit exactly how I like it, colors everywhere. Worth the wait." },
+{ name: "Khalid Al-Farsi", location: "عمان, مسقط", comment: "Do you have any “blue dolphin” tabs left? My friends are asking." },
+{ name: "نادية سالم", location: "الإمارات, الشارقة", comment: "بعد الاستخدام أشعر وكأني سوبرمان" },
+{ name: "أحمد العبدالله", location: "الكويت, الجهراء", comment: "توصيل سريع، منتج رائع وآمن" },
+{ name: "عبدالله الرشيد", location: "السعودية, الرياض", comment: "الكابتشينو أنيق، وأشربه بقوة وثبات طوال الليل. شكرًا لك يا ذيب." }, 
+];
             // Pagination variables
             const commentsPerPage = 10;
             let currentPage = 1;
