--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="ar" dir="rtl">
     <head>
@@ -989,45 +990,8 @@
                 }
             }
         </style>
-        <style>
-
-   /* About Us Arabic Section - Dark Premium Theme */
-  #about-us-ar {
-    background-color: #121212;
-    color: #e0e0e0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    max-width: 900px;
-    margin: 30px auto;
-    padding: 25px 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 15px rgba(255, 255, 255, 0.05);
-    line-height: 1.6;
-    direction: rtl;
-    text-align: right;
-  }
-
-  #about-us-ar h2 {
-    color: #f39c12; /* golden accent */
-    font-size: 1.8rem;
-    margin-bottom: 15px;
-    font-weight: 700;
-  }
-
-  #about-us-ar p {
-    font-size: 1.1rem;
-    margin-bottom: 10px;
-  }
-
-  /* Responsive adjustments */
-  @media (max-width: 600px) {
-    #about-us-ar {
-      padding: 18px 15px;
-      font-size: 1rem;
-    }
-    #about-us-ar h2 {
-      font-size: 1.5rem;
-  }
-</style>
+    
+   
     </head>
     <body>
         <!-- Loading Overlay -->
@@ -1218,6 +1182,46 @@
                 </div>
             </div>
         </section>
+<style>
+  /* About Us Arabic Section - Dark Premium Theme */
+  #about-us-ar {
+    background-color: #121212;
+    color: #e0e0e0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    max-width: 900px;
+    margin: 30px auto;
+    padding: 25px 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.05);
+    line-height: 1.6;
+    direction: rtl;
+    text-align: right;
+  }
+
+  #about-us-ar h2 {
+    color: #f39c12; /* golden accent */
+    font-size: 1.8rem;
+    margin-bottom: 15px;
+    font-weight: 700;
+  }
+
+  #about-us-ar p {
+    font-size: 1.1rem;
+    margin-bottom: 10px;
+  }
+
+  /* Responsive adjustments */
+  @media (max-width: 600px) {
+    #about-us-ar {
+      padding: 18px 15px;
+      font-size: 1rem;
+    }
+    #about-us-ar h2 {
+      font-size: 1.5rem;
+    }
+  }
+</style>
+        
 
         <script>
             // Customer comments data
@@ -1340,7 +1344,7 @@
                         <div class="comment-text">${comment.comment}</div>
                         <div class="verified-customer">
                             <i class="fas fa-check-circle"></i>
-                            Verified Customer / عميل موثق
+                            Verified Customer / عميل موثق CD
                         </div>
                     `;
                     commentsGrid.appendChild(commentCard);
