--- a/egypt/index.html
+++ b/egypt/index.html
@@ -23,32 +23,16 @@
         border-bottom: 1px solid #333;
         z-index: 1000;
     }
-    .top-bar a {
+    .top-bar a.store-name {
         color: #fff;
         text-decoration: none;
         font-size: 20px;
         font-weight: bold;
+        animation: glow 1.5s infinite alternate;
     }
-    .top-bar .search-container {
-        flex-grow: 1;
-        display: flex;
-        justify-content: center;
-        margin: 0 10px;
-    }
-    .top-bar input {
-        padding: 5px;
-        font-size: 14px;
-        border: none;
-        border-radius: 4px 0 0 4px;
-        outline: none;
-    }
-    .top-bar button {
-        padding: 6px 10px;
-        border: none;
-        background-color: #ff4444;
-        color: #fff;
-        border-radius: 0 4px 4px 0;
-        cursor: pointer;
+    @keyframes glow {
+        0% { text-shadow: 0 0 5px #ff4444, 0 0 10px #ff4444; }
+        100% { text-shadow: 0 0 15px #ffcc00, 0 0 30px #ffcc00; }
     }
     .cart-icon {
         position: relative;
@@ -128,6 +112,8 @@
         border-radius: 4px;
         cursor: pointer;
         font-weight: bold;
+        text-decoration: none;
+        text-align: center;
     }
     footer {
         text-align: center;
@@ -141,11 +127,7 @@
 
 <!-- Sticky Top Bar -->
 <div class="top-bar">
-    <a href="homepage.html">Mohamed Drugs Shop</a>
-    <div class="search-container">
-        <input type="text" id="searchInput" placeholder="Search product...">
-        <button onclick="searchProduct()">Search</button>
-    </div>
+    <a href="homepage.html" class="store-name">Mohamed Drugs Shop</a>
     <a href="payment.html" class="cart-icon">
         🛒
         <span class="cart-count" id="cartCount">0</span>
@@ -160,101 +142,29 @@
 
 <!-- Product Grid -->
 <div class="product-grid" id="productGrid">
-    <!-- Dummy Products -->
-    <div class="product" data-title="Product 1">
-        <img src="images/product1.jpg" alt="Product 1" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 1</h3>
-        <p class="price" onclick="addToCart()">250 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
+    <!-- Example Products with placeholder images -->
+    <div class="product" data-title="Product 1" data-price="250">
+        <img src="https://via.placeholder.com/300x200" alt="Product 1" onclick="addToCart(this)">
+        <h3 onclick="addToCart(this)">Product 1</h3>
+        <p class="price" onclick="addToCart(this)">250 EGP</p>
+        <button class="add-to-cart" onclick="addToCart(this)">Add to Cart</button>
     </div>
-    <div class="product" data-title="Product 2">
-        <img src="images/product2.jpg" alt="Product 2" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 2</h3>
-        <p class="price" onclick="addToCart()">400 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
+    <div class="product" data-title="Product 2" data-price="400">
+        <img src="https://via.placeholder.com/300x200" alt="Product 2" onclick="addToCart(this)">
+        <h3 onclick="addToCart(this)">Product 2</h3>
+        <p class="price" onclick="addToCart(this)">400 EGP</p>
+        <button class="add-to-cart" onclick="addToCart(this)">Add to Cart</button>
     </div>
-    <div class="product" data-title="Product 3">
-        <img src="images/product3.jpg" alt="Product 3" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 3</h3>
-        <p class="price" onclick="addToCart()">150 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-    </div>
-    <div class="product" data-title="Product 4">
-        <img src="images/product4.jpg" alt="Product 4" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 4</h3>
-        <p class="price" onclick="addToCart()">500 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-    </div>
-    <div class="product" data-title="Product 5">
-        <img src="images/product5.jpg" alt="Product 5" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 5</h3>
-        <p class="price" onclick="addToCart()">350 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-    </div>
-    <div class="product" data-title="Product 6">
-        <img src="images/product6.jpg" alt="Product 6" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 6</h3>
-        <p class="price" onclick="addToCart()">200 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-    </div>
-    <div class="product" data-title="Product 7">
-        <img src="images/product7.jpg" alt="Product 7" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 7</h3>
-        <p class="price" onclick="addToCart()">175 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-    </div>
-    <div class="product" data-title="Product 8">
-        <img src="images/product8.jpg" alt="Product 8" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 8</h3>
-        <p class="price" onclick="addToCart()">450 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-    </div>
-    <div class="product" data-title="Product 9">
-        <img src="images/product9.jpg" alt="Product 9" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 9</h3>
-        <p class="price" onclick="addToCart()">300 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-    </div>
-    <div class="product" data-title="Product 10">
-        <img src="images/product10.jpg" alt="Product 10" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 10</h3>
-        <p class="price" onclick="addToCart()">600 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-    </div>
-    <div class="product" data-title="Product 11">
-        <img src="images/product11.jpg" alt="Product 11" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 11</h3>
-        <p class="price" onclick="addToCart()">280 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-    </div>
-    <div class="product" data-title="Product 12">
-        <img src="images/product12.jpg" alt="Product 12" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 12</h3>
-        <p class="price" onclick="addToCart()">320 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-    </div>
-    <div class="product" data-title="Product 13">
-        <img src="images/product13.jpg" alt="Product 13" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 13</h3>
-        <p class="price" onclick="addToCart()">700 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-    </div>
-    <div class="product" data-title="Product 14">
-        <img src="images/product14.jpg" alt="Product 14" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 14</h3>
-        <p class="price" onclick="addToCart()">390 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-    </div>
-    <div class="product" data-title="Product 15">
-        <img src="images/product15.jpg" alt="Product 15" onclick="addToCart()">
-        <h3 onclick="addToCart()">Product 15</h3>
-        <p class="price" onclick="addToCart()">260 EGP</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
+    <div class="product" data-title="Product 3" data-price="150">
+        <img src="https://via.placeholder.com/300x200" alt="Product 3" onclick="addToCart(this)">
+        <h3 onclick="addToCart(this)">Product 3</h3>
+        <p class="price" onclick="addToCart(this)">150 EGP</p>
+        <button class="add-to-cart" onclick="addToCart(this)">Add to Cart</button>
     </div>
 </div>
 
 <!-- Check Reviews Button -->
-<button class="check-reviews">Check Reviews</button>
+<a href="reviews.html" class="check-reviews">Check Reviews</a>
 
 <!-- Footer -->
 <footer>
@@ -264,26 +174,19 @@
 <script>
     let cartCount = 0;
 
-    function addToCart() {
+    function addToCart(el) {
+        let product = el.closest(".product");
+        let name = product.getAttribute("data-title");
+        let price = product.getAttribute("data-price");
+
+        // Save to localStorage
+        localStorage.setItem("cartItem", JSON.stringify({ name, price }));
+
         cartCount++;
         document.getElementById("cartCount").innerText = cartCount;
-        window.location.href = "payment.html"; // Dummy payment page
-    }
 
-    function searchProduct() {
-        let input = document.getElementById("searchInput").value.toLowerCase();
-        let grid = document.getElementById("productGrid");
-        let products = Array.from(grid.getElementsByClassName("product"));
-
-        // Sort so matches appear first
-        products.sort((a, b) => {
-            let aMatch = a.getAttribute("data-title").toLowerCase().includes(input);
-            let bMatch = b.getAttribute("data-title").toLowerCase().includes(input);
-            return bMatch - aMatch;
-        });
-
-        // Append back to grid
-        products.forEach(p => grid.appendChild(p));
+        // Redirect to checkout/payment page
+        window.location.href = "payment.html";
     }
 </script>
 
