--- a/egypt/index.html
+++ b/egypt/index.html
@@ -460,10 +460,10 @@
         <a href="home.html" class="back-home"><i class="fas fa-arrow-left"></i></a>
         <a href="home.html" class="store-name">Mohamed Drugs Shop</a>
         <div class="cart-container">
-            <a href="cart.html" class="cart-icon"> 
-                <i class="fas fa-shopping-cart"></i>
-                <span class="cart-count" id="cartCount">0</span>
-            </a>
+            <a href="cart.html" class="cart-icon">
+  <img src="egypt/shopping-cart.png" alt="Cart Icon">
+  <span class="cart-count" id="cartCount">0</span>
+</a>
         </div>
     </div>
 
