--- a/egypt/index.html
+++ b/egypt/index.html
@@ -138,7 +138,7 @@
             text-shadow: 0 0 25px rgba(33, 150, 243, 0.7);
             filter: drop-shadow(0 0 15px rgba(33, 150, 243, 0.5));
         }
-        /* Cart Icon - Right Side - Blue with black cart symbol */
+        /* Cart Icon - Right Side - Completely Blue Design */
         .cart-container {
             position: absolute;
             right: 25px;
@@ -146,22 +146,23 @@
             transform: translateY(-50%);
         }
         .cart-icon {
-            background: linear-gradient(135deg, #2196F3 0%, #1976D2 50%, #42A5F5 100%);
-            color: #000;
+            background: linear-gradient(135deg, #1E88E5 0%, #1565C0 50%, #0D47A1 100%);
+            color: #000000;
             text-decoration: none;
-            padding: 16px;
-            border-radius: 50%;
-            font-size: 28px;
-            transition: all 0.3s ease;
-            box-shadow: 0 8px 25px rgba(33, 150, 243, 0.4);
+            padding: 18px;
+            border-radius: 20px;
+            font-size: 26px;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 0 10px 30px rgba(30, 136, 229, 0.5);
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            width: 60px;
-            height: 60px;
+            width: 65px;
+            height: 65px;
             position: relative;
             overflow: hidden;
-            border: 2px solid rgba(33, 150, 243, 0.3);
+            border: 3px solid rgba(13, 71, 161, 0.4);
+            font-weight: 900;
         }
         .cart-icon::before {
             content: '';
@@ -170,33 +171,51 @@
             left: -100%;
             width: 100%;
             height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
-            transition: 0.5s;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.4), transparent);
+            transition: 0.6s;
         }
         .cart-icon:hover::before {
             left: 100%;
         }
+        .cart-icon::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            background: linear-gradient(135deg, rgba(30, 136, 229, 0.2), rgba(13, 71, 161, 0.3));
+            border-radius: 17px;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+        .cart-icon:hover::after {
+            opacity: 1;
+        }
         .cart-icon:hover {
-            transform: translateY(-5px) scale(1.15);
-            box-shadow: 0 12px 35px rgba(33, 150, 243, 0.6);
-            background: linear-gradient(135deg, #1976D2 0%, #2196F3 50%, #42A5F5 100%);
-            border-color: rgba(33, 150, 243, 0.5);
+            transform: translateY(-8px) scale(1.2) rotate(5deg);
+            box-shadow: 0 20px 50px rgba(30, 136, 229, 0.7);
+            background: linear-gradient(135deg, #2196F3 0%, #1E88E5 50%, #1565C0 100%);
+            border-color: rgba(33, 150, 243, 0.7);
+            border-radius: 25px;
         }
         .cart-count {
             position: absolute;
-            top: -8px;
-            right: -8px;
-            background: linear-gradient(45deg, #ffd93d, #ffb74d);
-            color: #000;
-            font-size: 12px;
-            font-weight: bold;
-            padding: 5px 8px;
+            top: -12px;
+            right: -12px;
+            background: linear-gradient(45deg, #FF3D71, #FF6B9D);
+            color: #FFFFFF;
+            font-size: 14px;
+            font-weight: 900;
+            padding: 8px 10px;
             border-radius: 50%;
-            min-width: 22px;
+            min-width: 28px;
+            height: 28px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             text-align: center;
             animation: bounce 0.6s ease-in-out;
             z-index: 10;
-            border: 2px solid #fff;
+            border: 3px solid #FFFFFF;
+            box-shadow: 0 4px 15px rgba(255, 61, 113, 0.5);
         }
         @keyframes bounce {
             0%, 20%, 50%, 80%, 100% {
@@ -438,9 +457,10 @@
                 left: 15px;
             }
             .cart-icon {
-                width: 50px;
-                height: 50px;
-                font-size: 22px;
+                width: 55px;
+                height: 55px;
+                font-size: 20px;
+                padding: 15px;
             }
             .cart-container {
                 right: 15px;
@@ -635,14 +655,4 @@
                 </a>
                 <a href="product-detail.html" class="product-title">Brain Support O</a>
                 <p class="price">420 EGP</p>
-                <a href="#" onclick="addToCart(event)" class="add-to-cart">Add to Cart<span class="arabic">أضف إلى العربة</span></a>
-            </div>
-            
-            <!-- Product 16 -->
-            <div class="product">
-                <a href="product-detail.html">
-                    <img src="https://via.placeholder.com/300x150/55efc4/ffffff?text=Vitamin+P" alt="Vitamin P" class="product-thumbnail">
-                </a>
-                <a href="product-detail.html" class="product-title">Vitamin P Complex</a>
-                <p class="price">280 EGP</p>
-                <a href="#" onclick="addToCart(event)" class="add-to-cart">Add to Cart<span class="arabic">
+                <a href="#" onclick="addToCart(event)" class="add-to-cart">Add to
