--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@
                 </div>
             </div>
             <img
-                src="https://images.unsplash.com/photo-1584308666744-24d5c474f2ae?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80"
+                src="images/Banner.png"
                 alt="Pharmacy Products"
                 class="hero-image"
             />
