--- a/egypt/index.html
+++ b/egypt/index.html
@@ -473,7 +473,7 @@ footer {
 <!-- Sticky Header -->
 <div class="header" id="header">
     <!-- Updated Back Button -->
-    <a href="https://mohameddrugs.shop" class="back-home">BACK</a>
+    <a href="https://mohameddrugs.shop" class="back-home">Home</a>
     
     <!-- Store Name with New Link -->
     <a href="https://mohameddrugs.shop" class="store-name">Mohamed Drugs Shop</a>
