--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
             <h2 class="section-title">Choose Your Country</h2>
             <span class="arabic" style="display: block; text-align: center; margin-bottom: 40px">اختر بلدك</span>
             <div class="country-grid">
-                <a href="/shop/egypt" class="country-card" target="_blank">
+                <a href="https://mohameddrugs.shop/egypt/html.index" class="country-card" target="_blank">
                     <img src="https://flagcdn.com/w40/eg.png" alt="Egypt" />
                     <div class="country-name">
                         <span class="arabic-name">مصر</span>
