--- a/index.html
+++ b/index.html
@@ -1035,14 +1035,14 @@
             <h2 class="section-title">Choose Your Country</h2>
             <span class="arabic" style="display: block; text-align: center; margin-bottom: 40px">اختر بلدك</span>
             <div class="country-grid">
-                <a href="https://mohameddrugs.shop/egypt/html.index" class="country-card" target="_blank">
+                <a href="" class="country-card" target="_blank">
                     <img src="https://flagcdn.com/w40/eg.png" alt="Egypt" />
                     <div class="country-name">
                         <span class="arabic-name">مصر</span>
                         <span class="english-name">Egypt</span>
                     </div>
                 </a>
-                <a href="/shop/uae" class="country-card" target="_blank">
+                <a href="egypt/index.html" class="country-card" target="_blank">
                     <img src="https://flagcdn.com/w40/ae.png" alt="UAE" />
                     <div class="country-name">
                         <span class="arabic-name">الإمارات</span>
