--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
                         <span class="english-name">Egypt</span>
                     </div>
                 </a>
-                <a href="egypt/index.html" class="country-card" target="_blank">
+                <a href="https://mohameddrugs.shop/egypt/" class="country-card" target="_blank">
                     <img src="https://flagcdn.com/w40/ae.png" alt="UAE" />
                     <div class="country-name">
                         <span class="arabic-name">الإمارات</span>
