--- a/egypt/index.html
+++ b/egypt/index.html
@@ -241,8 +241,8 @@ body {
 
 .product-thumbnail {
     width: 100%;
-    height: 150px;
-    object-fit: cover;
+    aspect-ratio: 1 / 1;   /* always square */
+    object-fit: cover;     /* no stretching */
     border-radius: 15px;
     transition: all 0.3s ease;
     margin-bottom: 15px;
