--- a/egypt/index.html
+++ b/egypt/index.html
@@ -492,7 +492,7 @@ footer {
         <!-- Product 1 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt//Hashish.png" alt="Premium Medicine A" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt//Hashish.png" alt="Hashish (حشيش)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Premium Medicine A</a>
             <p class="price">250 EGP</p>
@@ -502,7 +502,7 @@ footer {
         <!-- Product 2 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/4ecdc4/ffffff?text=Supplement+B" alt="Health Supplement B" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/bango.png" alt="Bango (بانجو)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Health Supplement B</a>
             <p class="price">400 EGP</p>
