--- a/egypt/index.html
+++ b/egypt/index.html
@@ -494,7 +494,7 @@ footer {
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
                 <img src="https://mohameddrugs.shop/egypt//Hashish.png" alt="Hashish (حشيش)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Premium Medicine A</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Hashish (حشيش)</a>
             <p class="price">250 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
@@ -504,7 +504,7 @@ footer {
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
                 <img src="https://mohameddrugs.shop/egypt/bango.png" alt="Bango (بانجو)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Health Supplement B</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Bango (بانجو)</a>
             <p class="price">400 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
