--- a/egypt/index.html
+++ b/egypt/index.html
@@ -512,9 +512,9 @@ footer {
         <!-- Product 3 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/ffd93d/ffffff?text=Vitamin+C" alt="Vitamin Complex C" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/Marijuana.png" alt="Marijuana (ماريجوانا)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Vitamin Complex C</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Marijuana (ماريجوانا)</a>
             <p class="price">150 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
@@ -522,9 +522,9 @@ footer {
         <!-- Product 4 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/6bcf7f/ffffff?text=Pain+Relief+D" alt="Pain Relief D" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/Heroin.png" alt="Heroin (هيروين)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Pain Relief D</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Heroin (هيروين)</a>
             <p class="price">180 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
@@ -532,9 +532,9 @@ footer {
         <!-- Product 5 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/45b7d1/ffffff?text=Antibiotic+E" alt="Antibiotic E" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/Cocaine.png" alt="Cocaine (كوكايين)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Antibiotic E</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1"class="product-title">Cocaine (كوكايين)</a>
             <p class="price">320 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
