--- a/egypt/index.html
+++ b/egypt/index.html
@@ -542,9 +542,9 @@ footer {
         <!-- Product 6 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/9b59b6/ffffff?text=Herbal+F" alt="Herbal Extract F" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/Crystal Meth.png" alt="Crystal Meth (كريستال ميث / آيس)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Herbal Extract F</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Crystal Meth (كريستال ميث / آيس)</a>
             <p class="price">275 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
@@ -552,9 +552,9 @@ footer {
         <!-- Product 7 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/e67e22/ffffff?text=Digestive+G" alt="Digestive Aid G" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/blotter paper.png" alt="LSD Blotter Paper (ورق)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Digestive Aid G</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">LSD Blotter Paper (ورق)</a>
             <p class="price">195 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
