--- a/egypt/index.html
+++ b/egypt/index.html
@@ -562,9 +562,9 @@ footer {
         <!-- Product 8 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/e74c3c/ffffff?text=Immunity+H" alt="Immunity Booster H" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/LSD Liquid.jpeg" alt="LSD Liquid (سائل LSD)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Immunity Booster H</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">LSD Liquid (سائل LSD)</a>
             <p class="price">350 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
