--- a/egypt/index.html
+++ b/egypt/index.html
@@ -572,9 +572,9 @@ footer {
         <!-- Product 9 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/34495e/ffffff?text=Sleep+Aid+I" alt="Sleep Aid I" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/Magic Mushroom.png" alt="Magic Mushroom (فطر سحري)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Sleep Aid I</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Magic Mushroom (فطر سحري)</a>
             <p class="price">220 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
