--- a/egypt/index.html
+++ b/egypt/index.html
@@ -582,9 +582,9 @@ footer {
         <!-- Product 10 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/f39c12/ffffff?text=Energy+J" alt="Energy Boost J" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/Ecstasy.png" alt="Ecstasy (إكستاسي ) – MDMA pills" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Energy Boost J</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Ecstasy (إكستاسي ) – MDMA pills</a>
             <p class="price">290 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
