--- a/egypt/index.html
+++ b/egypt/index.html
@@ -592,9 +592,9 @@ footer {
         <!-- Product 11 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/d63031/ffffff?text=Heart+K" alt="Heart Health K" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/Tramadol.png" alt="Tramadol (ترامادول)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Heart Health K</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Tramadol (ترامادول)</a>
             <p class="price">380 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
@@ -602,9 +602,9 @@ footer {
         <!-- Product 12 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/00b894/ffffff?text=Joint+L" alt="Joint Care L" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/Captagon.png" alt="Captagon (كبتاجون)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Joint Care L</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Captagon (كبتاجون)</a>
             <p class="price">260 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
@@ -612,9 +612,9 @@ footer {
         <!-- Product 13 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/fd79a8/ffffff?text=Skin+M" alt="Skin Care M" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/Ketamine.png" alt="Ketamine (كيتامين" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Skin Care M</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Ketamine (كيتامين</a>
             <p class="price">310 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
@@ -622,9 +622,9 @@ footer {
         <!-- Product 14 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/00cec9/ffffff?text=Eye+N" alt="Eye Health N" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/Opium.png" alt="Opium (أفيون)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Eye Health N</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Opium (أفيون)</a>
             <p class="price">240 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
@@ -632,9 +632,9 @@ footer {
         <!-- Product 15 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/a29bfe/ffffff?text=Brain+O" alt="Brain Support O" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/Morphine.jpeg" alt="Morphine (مورفين)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Brain Support O</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Morphine (مورفين)</a>
             <p class="price">420 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
@@ -642,9 +642,9 @@ footer {
         <!-- Product 16 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://via.placeholder.com/300x150/55efc4/ffffff?text=Vitamin+P" alt="Vitamin P" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/egypt/Lyrica.jpeg" alt="Lyrica ( ليريكا)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Vitamin P Complex</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Lyrica ( ليريكا)</a>
             <p class="price">280 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
