--- a/egypt/index.html
+++ b/egypt/index.html
@@ -492,7 +492,7 @@ footer {
         <!-- Product 1 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt//Hashish.png" alt="Hashish (حشيش)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images//Hashish.png" alt="Hashish (حشيش)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Hashish (حشيش)</a>
             <p class="price">250 EGP</p>
